--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             }
         </style>
     </head>
-    <body style="background-color:antiquewhite;>
+    <body style="background-color:antiquewhite;">
           <center><img src="./media/imagesKRUTINGA.jpeg" width="150" height="150"></center>
           <center><h2>KRUTINGA RESTAURANT</h2></center>
           <p>
